--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="typewriter">💘 Gửi đến người anh thương 💘</h1>
+    <h1 class="typewriter">💘 Gửi đến cô gái bé nhỏ của Anh 💘</h1>
 
     <!-- Slideshow ảnh -->
     <div class="slideshow">
-      <img class="slide" src="images/bae.jpg" alt="Ảnh 1">
-      <img class="slide" src="images/làm mờ.png" alt="Ảnh 2">
+      <img class="slide" src="images/1.jpg" alt="Ảnh 1">
+      <img class="slide" src="images/2.jpg" alt="Ảnh 2">
+            <img class="slide" src="images/3.jpg" alt="Ảnh 3">
+                  <img class="slide" src="images/4.jpg" alt="Ảnh 4">
+                        <img class="slide" src="images/5.jpg" alt="Ảnh 5">
+                              <img class="slide" src="images/6.jpg" alt="Ảnh 6">
+
 
       
     </div>
