--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="typewriter">💘 Gửi đến cô gái bé nhỏ của Anh 💘</h1>
+    <h1 class="typewriter">💖 Gửi đến cô gái bé nhỏ của anh 💖</h1>
 
     <!-- Slideshow ảnh -->
     <div class="slideshow">
